--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.code.gson:gson:2.6.2'
-    implementation 'com.google.android.material:material:1.1.0'
+    
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.1'
+
+
 
 }
