--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.afinal">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
-        android:largeHeap="true"
-        android:hardwareAccelerated="false"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-        <activity android:name=".Profiles.CaloriesPlan.CalVegetablesActivity"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".Profiles.ChangePasswordActivity"></activity>
+        <activity android:name=".Profiles.CaloriesPlan.CalVegetablesActivity" />
         <activity android:name=".Profiles.CaloriesPlan.CalFruitsActivity" />
         <activity android:name=".Profiles.CaloriesPlan.CalDairyActivity" />
         <activity android:name=".Profiles.CaloriesPlan.CalFatsActivity" />
@@ -24,36 +21,31 @@
         <activity android:name=".Profiles.EditProfSettingActivity" />
         <activity android:name=".Profiles.ReminderSettingActivity" />
         <activity android:name=".Profiles.FitLevSettingActivity" />
-        <activity android:name=".Profiles.ProgressMenuActivity">
-        </activity>
+        <activity android:name=".Profiles.ProgressMenuActivity" />
         <activity android:name=".Profiles.SettingMenuActivity" />
         <activity android:name=".Profiles.ProfileMenuActivity" />
         <activity android:name=".Profiles.MealMenuActivity" />
         <activity android:name=".Profiles.HomeWorkoutActivity" />
         <activity android:name=".Profiles.gymWorkoutActivity" />
-        <activity android:name=".Train.PlanA.PlanAHomeActivity"/>
-        <activity android:name=".Train.PlanB.PlanBHomeActivity"/>
-        <activity android:name=".Admin.AdminUserActivity"></activity>
-        <activity android:name=".Admin.MainAdminActivity">
-
-        </activity>
+        <activity android:name=".Train.PlanA.PlanAHomeActivity" />
+        <activity android:name=".Train.PlanB.PlanBHomeActivity" />
+        <activity android:name=".Admin.AdminUserActivity" />
+        <activity android:name=".Admin.MainAdminActivity" />
         <activity android:name=".Train.VideoActivity" />
         <activity android:name=".Train.Inter_ContainerActivity" />
-        <activity android:name=".Train.IntermediateActivity">
-
-        </activity>
-        <activity android:name=".Profiles.MainProfileActivity"></activity>
+        <activity android:name=".Train.IntermediateActivity" />
+        <activity android:name=".Profiles.MainProfileActivity" />
         <activity android:name=".CreateProfile.CreateActiveLevelActivity" />
         <activity android:name=".CreateProfile.CreateFitLevelActivity" />
         <activity android:name=".CreateProfile.CreateBdateActivity" />
         <activity android:name=".CreateProfile.CreateHeightActivity" />
         <activity android:name=".CreateProfile.CreateWeightActivity" />
-        <activity android:name=".CreateProfile.CreateGenderActivity"></activity>
+        <activity android:name=".CreateProfile.CreateGenderActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".WelcomeActivity" />
         <activity android:name=".OnBoardActivity" />
-        <activity android:name=".SplashActivity" >
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -61,5 +53,9 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
